styles/form.css
:root {
    --main-font: 'Arial', sans-serif;
    --primary-color: #3498db;
    --background-color: #ecf0f1;
  }
  
  body {
    font-family: var(--main-font);
    background-color: var(--background-color);
    margin: 0;
    padding: 0;
  }
  
  main {
    display: grid;
    justify-items: center;
    max-width: 600px;
    margin: 30px auto;
    padding: 20px;
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  }
  
  .fh1 {
    text-align: center;
    color: var(--primary-color);
    grid-row: 1/2;
  }
  
  form {
    display: flex;
    flex-direction: column;
    gap: 20px;
    grid-row: 2 / 3;
    grid-column: 1 / 3;
  }
  
  fieldset {
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 15px;
  }
  
  label {
    display: block;
    margin-bottom: 8px;
  }
  
  input,
  select,
  output {
    width: 100%;
    padding: 8px;
    border: 1px solid #ddd;
    border-radius: 4px;
    box-sizing: border-box;
  }
  
  output {
    display: inline-block;
    padding: 8px;
    font-weight: bold;
  }
  
  .submitBtn {
    background-color: var(--primary-color);
    color: #fff;
    padding: 10px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
  }
  
  /* Add additional styles for better accessibility, such as focus and hover states */
  
  input:focus,
  select:focus,
  output:focus {
    outline: 2px solid var(--primary-color);
  }
  
  .submitBtn:hover {
    background-color: #217dbb;
  }

